# edge-ai-pdm

./: .gitignore  IMPLEMENTATION_LOGS.md  MT24AAC011_Evaluation1_Project_Phase01.pptx  README.md  VIVA_PREP.md  claude.md  findings.md  gemini.md  generate_fft_plot.py  main.py  progress.md  pyproject.toml  run_demo.bat  task_plan.md  temp_eval.py  test_thresholding.py
DUDU-BLDC/DUDU-BLDC/: README.md  requirements.txt
DUDU-BLDC/DUDU-BLDC/Data/AnalysisData/: DataAppendix.md  README.md  faulty.csv  faulty_zip.csv  healthy.csv  healthy_zip.csv
DUDU-BLDC/DUDU-BLDC/Output/DataAppendixOutput/: summary_statistics_current_Elec_Damage.csv  summary_statistics_current_Elec_Damage.md  summary_statistics_current_Healthy.csv  summary_statistics_current_Healthy.md  (+16 more)
Docs/: MT24AAC011_Evaluation2_Project_Phase01.pptx  MT24AAC011_Evaluation3_Project_Phase01.pptx  MTech_Project_Report_Phase1.docx  MTech_Project_Report_Phase1.md  MiniProjectReport_Draft3_MT24AAC011.doc
bldc_pdm/: VIVA_DEFENSE.md  gemini.md  run_demo.bat
bldc_pdm/data/processed/: features.csv  features.json
bldc_pdm/models/: edge_model.tflite  model_data.cc  random_forest_export.c  scaler_params.json
bldc_pdm/src/data/: preprocess.py
bldc_pdm/src/demo/: app.py  arduino_esp32.ino  sketch.ino
bldc_pdm/src/models/: train.py  train_tflite.py
data/processed/: features.csv  features.json
models/: edge_model.tflite  model_data.cc  random_forest_export.c
src/data/: preprocess.py
src/demo/: app.py  arduino_esp32.ino  get_samples.py  sketch.ino
src/models/: train.py  train_tflite.py
tools/: verify_data.py
(+6 files in other folders)
