[project]
name = "edge-ai-pdm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "m2cgen>=0.10.0",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "streamlit>=1.56.0",
    "tensorflow>=2.21.0",
]
